tests/snapshots/examples_fixtures/basics__arrays_basic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/arrays_basic.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found ||.

  --> examples/basics/arrays_basic.flx:15:14
   |
15 | let empty = [||];
   |              ^^
== stdout ==
<not executed>
